--- a/global.css
+++ b/global.css
@@ -9,11 +9,7 @@
 
 body {
   background-color: var(--background);
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  min-height: 100vh;
 }
 
 
@@ -78,9 +74,37 @@ body {
   width: 25%;
 }
 
+.w-12 {
+  width: 12.5%;
+}
+
 .container {
-  width: 1000px;
+  max-width: 1000px;
+  width: 100%;
   margin: 0 auto;
+}
+
+
+
+/* height */
+.h-100 {
+  height: 100%;
+}
+
+.h-75 {
+  height: 75%;
+}
+
+.h-50 {
+  height: 50%;
+}
+
+.h-25 {
+  height: 25%;
+}
+
+.h-12 {
+  height: 12.5%;
 }
 
 
@@ -508,3 +532,29 @@ body {
 .m-auto {
   margin: auto;
 }
+
+
+
+/* text alignment */
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-right {
+  text-align: right;
+}
+
+
+
+/* text size */
+span, p, label, input, button {
+  font-size: 1rem;
+}
+
+.
+
+
